[package]
name = "tokio-mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-redis = "0.4.1"
bytes = "1.1.0"
tokio-stream = "0.1.9"

[dependencies.tokio]
version = "1.19.2"
features = ["full"]